<resources>
    <string name="app_name">Music Life</string>
    <string name="more_playlist">More playlist</string>
    <string name="more">more ></string>
    <string name="char_more">></string>
    <string name="topic_genre">Topic &amp; Genre</string>
    <string name="title_album">Album Hot</string>
    <string name="recommend">Recommend Song</string>
    <string name="various">Various Artists</string>
    <string name="lyrics">Lyrics</string>
    <string name="_1_37">1:37</string>
    <string name="_4_12">4:12</string>
    <string name="photograph">Photograph</string>
    <string name="ed_sheeran">Ed Sheeran</string>
    <string name="now_playing">Now playing</string>
    <string name="music_life">Music Life</string>
    <string name="_00_00">00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_results_found">No results found</string>
    <string name="search_musiclife">Search MusicLife</string>
    <string name="find_artists_tracks_albums_and_playlist">Find artists, tracks, albums, and playlist.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="email_address">Username or Email</string>
    <string name="password">Password</string>
    <string name="login_now">Login</string>
    <string name="create_login">Sign Up</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <!--    share-->
    <string name="facebook_app_id">734170097243733</string>
    <string name="fb_login_protocol_scheme">fb734170097243733</string>

    <string name="lyric">Lyric:</string>
    <string name="weather">Weather</string>
    <string name="favorite">Favorite</string>
    <string name="phone">Phone</string>
    <string name="covid_19">Covid-19</string>
    <string name="music_from_the_device">Music from the device</string>
    <string name="recovered">Recovered</string>
    <string name="new_death">New Death</string>
    <string name="confirmed">Confirmed</string>
    <string name="death">Death</string>
    <string name="viet_nam">Viet Nam</string>
    <string name="global">Global</string>
    <string name="spread_of_virus">Spread of virus</string>
    <string name="see_all">See All</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>

    <string name="facebook_app_id2">791530684789992</string>
    <string name="fb_login_protocol_scheme2">fb791530684789992</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="write_a_comment">Write a comment...</string>

</resources>